Fix link input on buttons getting cut off

--- a/src/sass/_gutenberg.scss
+++ b/src/sass/_gutenberg.scss
@@ -74,7 +74,7 @@
 				}
 			}
 			input {
-				width: auto;
+				//width: auto;
 			}
 		}
 
